# MemoryPalace

./: .gitignore  README.md
.obsidian/: graph.json  workspace.json
C_C++/: 内存对齐.md
robotics/: RLinf-envs.md
robotics/cpp_and_python/: concurrency.md  cpp_and_python.md  keywords.md  knowledge.md  lambda_and_invoke.md  memory_alignment.md  memory_management.md  move_semantics.md  polymorphism.md  raii_exceptions.md  reference.md  smart_pointers.md
robotics/cpp_and_python/example/: CMakeLists.txt
robotics/cpp_and_python/example/c_oop/: CMakeLists.txt  bldc.c  bldc.h  main.c  motor.h  stepper.c  stepper.h
robotics/cpp_and_python/example/crtp_motor/: CMakeLists.txt  bldc.hpp  main.cpp  motor.hpp  stepper.hpp
robotics/embedded_rtos_build/: cmake.md  dma.md  embedded_rtos_build.md  esp32_sdmmc_psram_alignment.md  interrupt.md  ipc.md  knowledge.md  memory_and_stack.md  priority_inversion_and_mutex.md  reference.md  task_scheduling.md
robotics/hardware_debug_si/: hardware_debug_si.md  knowledge.md  reference.md
robotics/industrial_protocols/: embedded_multi_device_sync.md  industrial_protocols.md  knowledge.md  reference.md
robotics/industrial_protocols/EtherCat/: README.md  distributed_clock_concepts.md  distributed_clock_source_code.md  ec_sample_usage.md  ethercat_hardware_fundamentals.md  interview_questions.md  software_slave_simulation.md
robotics/lerobot/: dataset_quantile_stats.md  phase2_eval_domain_gap.md  phase2_pickorange_sft_chain_collapse.md  phase2_pickorange_sft_experiment_report.md  pick_orange_slowdown_analysis.md  rlinf_isaacsim_pi05.md
robotics/linux_dev_tuning/: knowledge.md  linux_dev_tuning.md  reference.md
robotics/motor_control_sensor_fusion/: FOCnote.md  SVPWM.md  coordinate_transform.md  current_sampling.md  field_weakening.md  knowledge.md  motor_control_sensor_fusion.md  reference.md  three_loop_cascade.md
robotics/pi_0.5/: pi_0.5_data_cleaning.md  pi_0.5_paper.md
robotics/reliability_lifecycle/: knowledge.md  reference.md  reliability_lifecycle.md
robotics/ros_robotics_frameworks/: QoS.md  knowledge.md  launch.md  reference.md  ros2_bag_rviz2.md  ros2_core_concepts.md  ros_robotics_frameworks.md  tf2.md
robotics/ros_robotics_frameworks/example/src/qos_demo/: CMakeLists.txt  package.xml
robotics/ros_robotics_frameworks/example/src/qos_demo/src/: history_depth_demo.cpp  transient_local_demo.cpp
robotics/ros_robotics_frameworks/example/src/topic_demo/: CMakeLists.txt  package.xml
robotics/ros_robotics_frameworks/example/src/topic_demo/src/: listener.cpp  talker.cpp
robotics/sim2real/: domain_randomization_and_adaptation.md  fundamentals.md  policy_transfer_and_feedback.md  real2sim2real.md  sim2real.md  system_identification.md
robotics/simulator/: LIPM_RL_footstep_planning.md  SLIP_3D_replace_LIPM_debug.md  training_metrics_reference.md
robotics/simulator/example/: CMakeLists.txt
robotics/simulator/example/simulation_dashboard/: CMakeLists.txt  README.md  dashboard.cpp  dashboard.hpp
robotics/simulator/example/slip_1d/: CMakeLists.txt  README.md  cartPoleDynamics.m  hopper_sim_ui.cpp  model.xml  slip_1d_model.cpp  slip_1d_model.hpp
robotics/simulator/example/slip_1d_trajopt/: Algorithm.md  CMakeLists.txt  README.md  slip_trajopt_ui.cpp  trajopt.cpp  trajopt.hpp
robotics/simulator/example/slip_2d/: Algorithm.md  CMakeLists.txt  model.xml  slip_2d_model.cpp  slip_2d_model.hpp  slip_2d_sim.cpp  slip_2d_sim.hpp  slip_2d_sim_ui.cpp
robotics/tinker/: WSL2安装指南.md  deployment.md  hardware.md  knowledge.md  piped-enchanting-starlight.md  repos.md  tinker.md  training.md  training_log_analysis.md
robotics/tinker/algorithm/: LIPM_not_for_tinker.md  RL_MPC_hybrid_reference.md  qp.md  reward_design_sota.md  reward_functions_analysis.md  reward_weight_adjustment.md  vmc.md
robotics/tinker/mechanical/: leg-mechanism-types.md
robotics/tinker/src_analysis/omnibotctrl/: overview.md  training_pipeline.md
robotics/tinker/src_analysis/omnibothmi/: overview.md
robotics/tinker/src_analysis/omnibothub/: control_task.md  module-architecture.md  navigation_task.md  overview.md  protocols.md  spi-architecture.md
robotics/tinker/src_analysis/omnibothub/module/: module-gait.md  module-math.md  module-param.md  module-reserved.md  module-src.md  module-vmc.md
robotics/tinker/src_analysis/omnibottele/: firmware.md  overview.md
